posts, admin controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,8 @@ spring.mail.properties.mail.smtp.allow8bitmime=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.properties.mail.debug=true
 
-server.port=8085
+files.storage.path=/Users/shagiakhmetovazukhra/Desktop/semester-work-spring/files
+files.url=
+
+server.port=8081
 
