add avatar upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,5 +22,9 @@ spring.mail.properties.mail.debug=true
 files.storage.path=/Users/shagiakhmetovazukhra/Desktop/semester-work-spring/files
 files.url=
 
+spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-file-size=100MB
+
+
 server.port=8081
 
