--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=qwerty007
-spring.datasource.url=jdbc:postgresql://localhost:5432/java_lab_bd
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:qwerty007}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/java_lab_bd}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
